# UAV-Based-Wildfire-Detection-using-RGB-and-Thermal-Cameras

./: .gitmodules  README.md
models-training/: early_stopping.py  faster_rcnn_or_ssd.py  jetson_metrics.py  mlflow_logger.py  object_detection_evaluator.py  pascal_voc_dataset.py  predict.py  yolov8_tensorRT.py
models-training/mlruns/145048673701680036/: meta.yaml
models-training/mlruns/283316781686959672/: meta.yaml
models-training/mlruns/319101247782183870/: meta.yaml
models-training/mlruns/391642949374407704/: meta.yaml
models-training/mlruns/613822783539404206/: meta.yaml
models-training/mlruns/698217645417430584/: meta.yaml
python-code/models-training/: augmentation.py  coco_dataset.py  count_instances.py  data.yaml  efficient_det.py  mixed_precision_or_quantization.py  model_converter_and_evaluator.py  yolov8.py
python-code/scripts-for-drone/: calibration_cameras.py  homography_matrix.npz
python-code/scripts-for-drone/ROS2_scripts/src/msgs/: CMakeLists.txt  package.xml
python-code/scripts-for-drone/ROS2_scripts/src/msgs/msg/: TrackedDetections.msg
python-code/scripts-preprocessing/: convert_to_grayscale.py  data_augmentation.py  mot_to_pascal_voc_converter.py  pascal_voc_to_yolo_converter.py  process_pascal_labels.py  process_yolo_labels.py  resize_images.py  save_images.py  xml_info_to_pascal_voc_format_converter.py  yolo_to_pascal_voc_converter.py
scripts-for-drone/: sharp_image.py
scripts-preprocessing/: count_images.py  get_images_per_frame.py  ground_truth_to_pascal_voc_converter.py  pascal_voc_to_coco_converter.py
(+3689 files in other folders)
